Bug 507244 - Pressing Ctrl+A in Date field of Exchange Rate/Price Editor selects year instead of full date
Summary: Pressing Ctrl+A in Date field of Exchange Rate/Price Editor selects year inst...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.2.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-07-19 21:12 UTC by Ingo Klöcker
Modified: 2025-07-27 08:20 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ingo Klöcker 2025-07-19 21:12:12 UTC
Pressing Ctrl+A in Date field of Exchange Rate/Price Editor should select the full date instead of just the year.

STEPS TO REPRODUCE
1. Open Exchange Rate/Price Editor
2. Press Tab until Date field has focus
3. Press Ctrl+A to select the full date

OBSERVED RESULT
Only the year is selected.

EXPECTED RESULT
The full date is selected.

Pressing Ctrl+A again selects the full date, but that doesn't make sense to me. My use case is that I manually update the price of multiple investments and I want to copy&paste the date so that I don't have to enter day and month separately for each investment.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: openSUSE Tumbleweed
KDE Frameworks Version: 6.16
Qt Version: 6.9.1
Comment 1 Thomas Baumgart 2025-07-26 14:47:32 UTC
Git commit 6137fa17590a6e1da25210649ac9619dca71a472 by Thomas Baumgart.
Committed on 26/07/2025 at 14:47.
Pushed by tbaumgart into branch 'master'.

Improve keyboard handling in date edit widget

Pressing Ctrl+A selects all characters of the date. If only a part of
the date is selected but the text to be pasted is larger, then the
widget is cleared first. Selection using Ctrl and Shift works as
expected and does not switch sections of the date anymore.
FIXED-IN: 5.2.1

M  +18   -2    kmymoney/widgets/kmymoneydateedit.cpp

https://invent.kde.org/office/kmymoney/-/commit/6137fa17590a6e1da25210649ac9619dca71a472
Comment 2 Thomas Baumgart 2025-07-27 08:20:25 UTC
Git commit 082f367280834929d0f35944be23a3e67e60855f by Thomas Baumgart.
Committed on 27/07/2025 at 08:17.
Pushed by tbaumgart into branch '5.2'.

Improve keyboard handling in date edit widget

Pressing Ctrl+A selects all characters of the date. If only a part of
the date is selected but the text to be pasted is larger, then the
widget is cleared first. Selection using Ctrl and Shift works as
expected and does not switch sections of the date anymore.
FIXED-IN: 5.2.1
(cherry picked from commit 6137fa17590a6e1da25210649ac9619dca71a472)

M  +18   -2    kmymoney/widgets/kmymoneydateedit.cpp

https://invent.kde.org/office/kmymoney/-/commit/082f367280834929d0f35944be23a3e67e60855f